# OpenECL

./: .gitignore  CMakeLists.txt  README.md  evo.properties
src/: main.cpp
src/impl/: algorithms.hpp  operators.hpp  population_generators.hpp  solutions.hpp
src/impl/algorithms/genetic_algorithm/: generational_genetic_algorithm.hpp  genetic_algorithm.hpp  steady_state_genetic_algorithm.hpp
src/impl/operators/: crossover_operators.hpp  mutation_operators.hpp  replacement_operators.hpp  selection_operators.hpp
src/impl/operators/crossover/vector_based/: one_point_crossover.hpp  two_point_crossover.hpp
src/impl/operators/replacement/: n_worst_replacement.hpp
src/impl/operators/selection/: k_tournament_selection.hpp
src/impl/optimization_problem/: one_max_fitness_evaluator.hpp
src/impl/population_generators/: bit_string_population_generator.hpp
src/impl/solutions/: vector_based_solution.hpp
src/impl/solutions/vector_based/: bit_string_solution.hpp
src/lib/: open_ecl.hpp
src/model/: components_box.hpp  i_evolutionary_algorithm.hpp  i_fitness.hpp  i_fitness_evaluator.hpp  i_population.hpp  i_population_generator.hpp  model.hpp
src/model/operators/: i_crossover.hpp  i_mutation.hpp  i_replacement.hpp  i_selection.hpp  operators_model.hpp
src/model/solution/: i_solution.hpp
src/utils/: algorithm_factory.cpp  algorithm_factory.hpp  data_utils.hpp  operator_factory.hpp  population_generator_factory.cpp  population_generator_factory.hpp  property_entry.hpp  property_reader.hpp  random_utils.hpp
(+1 files in other folders)
